@@ -43,9 +43,14 @@ iconv_feed(struct istream_iconv *ic, const char *data, size_t length)
     do {
         buffer = dest = fifo_buffer_write(ic->buffer, &dest_left);
         if (buffer == NULL) {
-            istream_buffer_send(&ic->output, ic->buffer);
-            if (ic->buffer == NULL)
-                return 0;
+            size_t nbytes = istream_buffer_send(&ic->output, ic->buffer);
+            if (nbytes == 0) {
+                if (ic->buffer == NULL)
+                    return 0;
+                break;
+            }
+
+            assert(ic->buffer != NULL);
 
             continue;
         }
