@@ -1,6 +1,7 @@
 cm4all-beng-proxy (0.3.7) unstable; urgency=low
 
   * istream_subst: exit the loop if state==INSERT
+  * istream_iconv: check if the full buffer could be flushed
 
  --
 
